--- a/tracking.html
+++ b/tracking.html
@@ -51,7 +51,7 @@
                 <!-- First column -->
                 <div class="col-md-6 d-flex flex-column gap-3">
                     <!-- First row -->
-                    <div class="box d-flex justify-content-center bg-body-tertiary rounded-4">
+                    <div class="box d-flex justify-content-center bg-body-tertiary rounded-4 border border-dark border-5">
                         <div class="d-flex flex-column align-items-center gap-2 justify-content-center">
                             <h2 class="fw-bold"><img class="icons" src="images/thermometer.svg" alt="thermometer">Temperature</h2>
                             <div class="thermostat">
@@ -61,10 +61,10 @@
                         </div>
                     </div>
                     <!-- second row -->
-                    <div class="box d-flex justify-content-center rounded-4  bg-body-tertiary">
+                    <div class="box d-flex justify-content-center rounded-4  bg-body-tertiary border border-dark border-5">
 
                         <div class="d-flex flex-column align-items-center gap-2 justify-content-center">
-                            <h2 class="fw-bold"><img class="icons" src="images/humidity-svgrepo-com.svg" alt="thermometer">Humidity</h2>
+                            <h2 class="fw-bold"><img class="icons" src="images/humidity-svgrepo-com.svg" alt="thermometer"> Humidity</h2>
                             <div class="thermostat">
                                 <img src="images/circle.svg" alt="" height="260">
                                 <div class="thermo-value fw-bold">37%</div>
@@ -75,7 +75,7 @@
                     
                 </div>
                 <!-- Second Column -->
-                <div class="col-md-6 d-flex flex-column gap-2 align-items-center box border border-dark rounded-4 border-5 pt-4 bg-body-tertiary">
+                <div class="col-md-6 d-flex flex-column gap-2 align-items-center box border border-dark border-5 rounded-4 pt-4 bg-body-tertiary">
                     <!-- first row -->
                     <h2 class="fw-bold "><img class="icons" src="images/bulp-svgrepo-com.svg" alt="bulp">Intensity</h2>
                     <div class="thermostat mb-4">
