Add dark mode switch

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="en" data-bs-theme="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +13,8 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
-            
-        <h2><img src="images/chicken (1).png" alt="chicken icon" height="30"> vue</h2>
+                    
+        <h2><img id="logo"src="images/dark-chicken.png" alt="chicken icon" height="30"> vue</h2>
         </a>
       </div>
 
@@ -27,6 +27,8 @@
       <div class="col-md-3 text-end">
         <button type="button" class="btn btn-outline-success me-xl-2">Request Service</button>
         <!-- <button type="button" class="btn btn-dark">Sign-up</button> -->
+        <img class="mx-3" src="images/moon.svg" alt="moon icon" height="30" id="theme">
+
       </div>
     </header>
   </div>
@@ -80,7 +82,7 @@
       </div>
   </section>
 
-    <script src="js/script.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
